--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,5 +4,7 @@
   width: 100%;
   .page_title {
     margin: 20px auto;
+    font-family: "Shadows Into Light", cursive;
+    font-size: 3rem;
   }
 }
