--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600&family=Shadows+Into+Light&display=swap");
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lexend", sans-serif;
+  font-weight: 300;
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
   color: #202020;
-  max-width: 1520px;
+  max-width: 1320px;
 }
