--- a/components/webchart/wrapper/wrapper.module.scss
+++ b/components/webchart/wrapper/wrapper.module.scss
@@ -3,6 +3,7 @@
   min-height: 100vh;
   box-sizing: border-box;
   position: relative;
+  cursor: pointer;
   .tooltip {
     position: absolute;
     right: 20px;
@@ -108,6 +109,90 @@
     }
     @media (max-width: 600px) {
       margin: 0px 20px;
+    }
+  }
+
+  .modalBackground {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+
+    .modalBox {
+      width: 350px;
+      height: 650px;
+      background-color: #fff;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: column;
+      border-radius: 24px;
+      position: relative;
+      animation: slideup 0.5s ease-in backwards;
+      .modalThumbnail {
+        width: 100%;
+        height: 300px;
+        position: relative;
+        top: 0;
+        left: 0;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 24px 24px 0px 0px;
+        }
+      }
+      .closeBtn {
+        width: 40px;
+        height: 40px;
+        background-color: transparent;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        border: none;
+        svg {
+          width: 100%;
+          height: 100%;
+          stroke: rgb(150, 220, 204);
+          cursor: pointer;
+          path {
+            stroke: rgb(150, 220, 204);
+          }
+        }
+      }
+      .modalHeader {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        h4 {
+          font-family: "Shadows Into Light", cursive;
+          font-size: 1.8rem;
+          margin: 0;
+          padding: 0;
+        }
+        p {
+          margin: 0;
+          padding: 0;
+          font-style: italic;
+        }
+      }
+      .modalContent {
+        padding: 20px;
+        text-align: justify;
+        p {
+          font-size: 0.9rem;
+          margin: 0;
+          padding: 0;
+        }
+      }
     }
   }
 }
